fixed ugly styling behind circles

--- a/Website LRF theme/css/agency.css
+++ b/Website LRF theme/css/agency.css
@@ -466,7 +466,6 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #8F2851;
 }
 
 .timeline > li .timeline-image h4 {
